<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.5</version>
    </parent>

    <groupId>no.nav.doksikkerhetsnett</groupId>
    <artifactId>doksikkerhetsnett</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>app</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
        <commons-collections4.version>4.5.0</commons-collections4.version>
        <context-propagation.version>1.1.3</context-propagation.version>
        <slack-api-client.version>1.45.4</slack-api-client.version>
        <dok-common-jiraapi.version>1.6.0</dok-common-jiraapi.version>

        <!-- Plugins -->
        <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
        <cyclonedx-maven-plugin.version>2.9.1</cyclonedx-maven-plugin.version>

        <!-- Test -->
        <spring-cloud-contract-wiremock.version>4.2.1</spring-cloud-contract-wiremock.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.nav.doksikkerhetsnett</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>context-propagation</artifactId>
                <version>${context-propagation.version}</version>
            </dependency>
            <dependency>
                <groupId>com.slack.api</groupId>
                <artifactId>slack-api-client</artifactId>
                <version>${slack-api-client.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dok-common</groupId>
                <artifactId>jiraapi</artifactId>
                <version>${dok-common-jiraapi.version}</version>
            </dependency>

            <!--test-->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-contract-wiremock</artifactId>
                <version>${spring-cloud-contract-wiremock.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>${maven-toolchains-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${java.version}</version>
                            <vendor>openjdk</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
            <!-- Gir økt oppløsning på dependency graph i salsa	for Maven-prosjekt -->
            <plugin>
                <groupId>org.cyclonedx</groupId>
                <artifactId>cyclonedx-maven-plugin</artifactId>
                <version>${cyclonedx-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>makeAggregateBom</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
